fix misaligned login

--- a/app/styles/core/loading-error.sass
+++ b/app/styles/core/loading-error.sass
@@ -5,7 +5,7 @@
     margin-top: 20px
   
   .login-btn
-    margin-right: 10px
+    margin-right: 0px
   
   #not-found-img
     max-width: 20%
